--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,10 @@
-<script src={{ url_for('static', filename='index.js') }}></script>
-
-<h1>Welcome to NBCrawler</h1>
-<p>Enter a search term below, then hit the scrape button to see the results</p>
-<input type="text" name="input" id="queryInput" value="nbc">
-<button name="scrapeButton" onClick="scrape()">Scrape</button>
+{% extends "base.html" %}
+{% block head %}
+	<script src={{ url_for('static', filename='index.js') }}></script>
+{% endblock %}
+{% block content %}
+	<h1>Welcome to NBCrawler</h1>
+	<p>Enter a search term below, then hit the scrape button to see the results</p>
+	<input type="text" name="input" id="queryInput" value="nbc">
+	<button name="scrapeButton" onClick="scrape()">Scrape</button>
+{% endblock %}
